bug fixed: nothing happens after few pages when trying to download more posts; flair contrast changed

--- a/src/components/Topics/Topics.css
+++ b/src/components/Topics/Topics.css
@@ -46,7 +46,7 @@
   font-size: 10px;
   color: white;
   font-weight: 500;
-  background-color: #4770f8;
+  background-color: #295afc;
   width: fit-content;
   padding: 0 6px;
   border-radius: 20px;
